Bug 55086. Be sure to position child views, too! r=dbaron, sr=attinasi, a=blizzard.