layout/html/base/src/nsBlockReflowContext.cpp
@@ -526,6 +526,9 @@ nsBlockReflowContext::DoReflowBlock(nsHTMLReflowState &aReflowState,
   if (view) {
     nsContainerFrame::PositionFrameView(mPresContext, aFrame, view);
   }
+  else {
+    nsContainerFrame::PositionChildViews(mPresContext, aFrame);
+  }
 
 #ifdef DEBUG
   mMetrics.width = nscoord(0xdeadbeef);
